src/tests/krate/snapshots/integration__krate__yanking__patch_version_yank_unyank.snap
---
source: src/tests/krate/yanking.rs
expression: json
---
{
  "version": {
    "id": 1,
    "crate": "patchable",
    "num": "1.0.0",
    "dl_path": "/api/v1/crates/patchable/1.0.0/download",
    "readme_path": "/api/v1/crates/patchable/1.0.0/readme",
    "updated_at": "[datetime]",
    "created_at": "[datetime]",
    "downloads": 0,
    "features": {},
    "yanked": true,
    "yank_message": "Yanking reason",
    "lib_links": null,
    "license": "MIT",
    "links": {
      "dependencies": "/api/v1/crates/patchable/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/patchable/1.0.0/downloads",
      "authors": "/api/v1/crates/patchable/1.0.0/authors"
    },
    "crate_size": 156,
    "published_by": {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": "http://example.com/icon-the-first.png",
      "url": "https://github.com/foo",
      "created_at": "[datetime]"
    },
    "audit_actions": [
      {
        "action": "publish",
        "user": {
          "id": 1,
          "login": "foo",
          "name": null,
          "avatar": "http://example.com/icon-the-first.png",
          "url": "https://github.com/foo",
          "created_at": "[datetime]"
        },
        "time": "[datetime]"
      },
      {
        "action": "yank",
        "user": {
          "id": 1,
          "login": "foo",
          "name": null,
          "avatar": "http://example.com/icon-the-first.png",
          "url": "https://github.com/foo",
          "created_at": "[datetime]"
        },
        "time": "[datetime]"
      }
    ],
    "checksum": "d4d2d515985c394dc9fa95c56b935ab0805f6dfbd91a6dc99af9d316dff96dc0",
    "rust_version": null,
    "has_lib": false,
    "bin_names": [],
    "edition": null,
    "description": "description",
    "homepage": null,
    "documentation": null,
    "repository": null,
    "trustpub_data": null,
    "linecounts": {
      "languages": {},
      "total_code_lines": 0,
      "total_comment_lines": 0
    }
  }
}
